--- a/index.html
+++ b/index.html
@@ -25,3 +25,9 @@
   <script src="logic.js"></script>
 </body>
 </html>
+<div class="rarity-calculator">
+  <h3>Rarity Outcome Calculator</h3>
+  <div id="rarityInputs"></div>
+  <button onclick="calculateRarity()">Calculate Outcome</button>
+  <p id="rarityResult"></p>
+</div>
